feat: scrape from truemeds + database

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,36 @@
         <h1>Select </h1>
     </center>
     <div class="item-container">
-        <a href="/netmeds">NetMeds</a>
-        <a href="/zeelab">Zeelab</a>
+        <a href="/netmeds">
+            <button> NetMeds Scape </button>
+        </a>
+        <br/><br/>
+
+        <a href="/zeelab">
+            <button> Zeelab Scape </button>
+        </a>
+        <br/><br/>
+        
+        <a href="/truemeds">
+            <button> Truemeds Scape </button>
+        </a>
+        <br/><br/>
+        
+        <a href="/netmeds-db">
+            <button> NetMeds from database </button>
+        </a>
+        <br/><br/>
+        
+        <a href="/zeelab-db">
+            <button> Zeelab from database </button>
+        </a>
+        <br/><br/>
+        
+        <a href="/truemeds-db">
+            <button> Truemeds from database </button>
+        </a>
+        <br/><br/>
+
     </div>
 </body>
 
