--- a/templates/truemeds.html
+++ b/templates/truemeds.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netmeds Scrapping</title>
+    <title>Truemeds Scrapping</title>
     <style>
         .item-container {
             display: flex;
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <center><h1>Web Scraping Results for Netmeds</h1></center>
+    <center><h1>Web Scraping Results for Truemeds</h1></center>
     <a href="{{ '/' }}">
         <button>Go Back</button>
     </a>
@@ -38,6 +38,7 @@
                 <img src="{{ data.ImageUrl[index] }}" alt="Product Image">
                 <p>{{ data.Title[index] }}</p>
                 <p>Price: {{ data.Price[index] }}</p>
+                <p><a href="{{ data['ProductLink'][index] }}">Product Link</a></p>
             </div>
         {% endfor %}
     </div>
