feat: searchbar, netmeds productLink

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,37 +13,44 @@
 <body>
     <center>
         <h1>Select </h1>
+
+        <form action="/netmeds-db-search" method="get">
+            <label for="search">Search:</label>
+            <input type="text" id="search" name="q">
+            <button type="submit">Search</button>
+        </form>
+
     </center>
     <div class="item-container">
         <a href="/netmeds">
             <button> NetMeds Scape </button>
         </a>
-        <br/><br/>
+        <br /><br />
 
         <a href="/zeelab">
             <button> Zeelab Scape </button>
         </a>
-        <br/><br/>
-        
+        <br /><br />
+
         <a href="/truemeds">
             <button> Truemeds Scape </button>
         </a>
-        <br/><br/>
-        
+        <br /><br />
+
         <a href="/netmeds-db">
             <button> NetMeds from database </button>
         </a>
-        <br/><br/>
-        
+        <br /><br />
+
         <a href="/zeelab-db">
             <button> Zeelab from database </button>
         </a>
-        <br/><br/>
-        
+        <br /><br />
+
         <a href="/truemeds-db">
             <button> Truemeds from database </button>
         </a>
-        <br/><br/>
+        <br /><br />
 
     </div>
 </body>
