--- a/templates/netmeds_db.html
+++ b/templates/netmeds_db.html
@@ -38,6 +38,7 @@
                 <img src="{{ index.ImageUrl }}" alt="Product Image">
                 <p>{{ index.Title }}</p>
                 <p>Price: {{ index.Price }}</p>
+                <p><a href="{{ index.ProductLink }}">Product Link</a></p>
             </div>
         {% endfor %}
     </div>
