--- a/templates/truemeds.html
+++ b/templates/truemeds.html
@@ -38,7 +38,7 @@
                 <img src="{{ data.ImageUrl[index] }}" alt="Product Image">
                 <p>{{ data.Title[index] }}</p>
                 <p>Price: {{ data.Price[index] }}</p>
-                <p><a href="{{ data['ProductLink'][index] }}">Product Link</a></p>
+                <p><a href="{{ data['ProductLink'][index] }} " target="_blank">Product Link</a></p>
             </div>
         {% endfor %}
     </div>
