--- a/templates/zeelab_db.html
+++ b/templates/zeelab_db.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,18 @@
         .item-container {
             display: flex;
             flex-wrap: wrap;
-            justify-content: flex-start; /* Left-align items */
+            justify-content: flex-start;
+            /* Left-align items */
         }
 
         .item-box {
-            border: 2px solid black; /* Border style */
+            border: 2px solid black;
+            /* Border style */
             padding: 10px;
             margin: 10px;
             text-align: center;
-            width: 200px; /* Adjust the width as needed */
+            width: 200px;
+            /* Adjust the width as needed */
         }
 
         .item-box img {
@@ -25,23 +29,28 @@
         }
     </style>
 </head>
+
 <body>
-    <center><h1>ZeeLab Pharmacy - Bone & Joints Products</h1></center>
+    <center>
+        <h1>ZeeLab Pharmacy - Bone & Joints Products</h1>
+    </center>
     <a href="{{ '/' }}">
         <button>Go Back</button>
     </a>
-    <br/><br/>
-    
+    <br /><br />
+
     <div class="item-container">
         {% for index in data %}
-            <div class="item-box">
-                <img src="{{ index.ImageUrl }}" alt="Product Image">
-                <p>{{ index.Title }}</p>
-                <p>Price: {{ index.Price}}</p>
-                <p><a href="{{ index.ProductLink }}">Product Link</a></p>
-                <p>{{ index.ProductInfo }}</p>
-            </div>
+        <div class="item-box">
+            <a href="{{index.ProductLink}}" target="_blank"><img src="{{ index.ImageUrl }}" alt="Product Image"></a>
+            <p>{{ index.Title }}</p>
+            <p>Price: {{ index.Price }}</p>
+            <p>{{ index.ProductInfo }}</p>
+            <p><a href="{{ index.ProductLink }} " target="_blank">Product Link</a></p>
+        </div>
         {% endfor %}
     </div>
+    </div>
 </body>
+
 </html>
