--- a/templates/truemeds_db.html
+++ b/templates/truemeds_db.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <center><h1>Web Scraping Results for Turemeds</h1></center>
+    <center><h1>Web Scraping Results for Truemeds</h1></center>
     <a href="{{ '/' }}">
         <button>Go Back</button>
     </a>
