added: dropdown added for zeelab scraper

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,8 @@
         </a>
         <br /><br />
 
-        <a href="/zeelab">
+        <!-- <a href="/zeelab"> -->
+        <a href="/selector">
             <button> Zeelab Scape </button>
         </a>
         <br /><br />
