feat: text extraction from image using OCR and search from text

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,11 @@
             <br>
             <button type="submit">Filter</button>
         </form>
-
+        <br /><br />
+        <form action="/uploader" method="post" enctype="multipart/form-data">
+            <input type="file" name="image">
+            <button type="submit">Upload</button>
+        </form>    
     </center>
     <div class="item-container">
         <a href="/netmeds">
